Day30(0214) progress update

--- a/content/Day30(0214).html
+++ b/content/Day30(0214).html
@@ -133,22 +133,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">導入數學模組 << <a href='導入數學模組.html'>Previous</a> <a href='亂數函式.html'>Next</a> >> 亂數函式<br /><h1>常用數學函式</h1>
-<p>1.math.pi、math.e、math.nan、math.inf:分別表示圓周率、自然對數e、NaN(not a number)、正無限大，負無限大則為-math.inf。</p>
-<p>2.math.ceil(X):傳回<span>大於等於X的最小整數，例如:</span></p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;math.ceil(8.999)
-9</pre>
-<p><span>3.math.fabs(X):傳回X的浮點數絕對值，例如:</span></p>
-<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;math.fabs(-5)
-5.0</pre>
-<p>4.math.factorial(X):傳回正整數X的階層值，例如:</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;math.factorial(4)    #(即為4!=4*3*2*1=24)
-24</pre>
-<p>5.math.floor(X):傳回<span>小於等於X的最大整數。</span></p>
-<p><span>6.math.radians(X):傳回角度X轉為弳度的結果。</span></p>
-<p><span>7.math.degrees(X):傳回弳度X轉為角度的結果。</span></p>
-<p><span>8.math.sin(X)、math.cos<span>(X)、math.tan<span>(X)、math.as<span>in(X)、math.acos<span>(X)、math.atan<span>(X)三角函式:分別傳回X的正弦值、餘弦值、正切值、反正弦值、反餘弦值、反正切值，需注意的適當中的參數X需為弳度而非角度，可利用上述math.radians函式將角度轉換為弳度。</span></span></span></span></span></span></p>
-<br />導入數學模組 << <a href='導入數學模組.html'>Previous</a> <a href='亂數函式.html'>Next</a> >> 亂數函式</div>
+    <div id="tipue_search_content">set集合(二) << <a href='set集合(二).html'>Previous</a> <a href='dict字典(一).html'>Next</a> >> dict字典(一)<br /><h1>Day30(0214)</h1>
+<br />set集合(二) << <a href='set集合(二).html'>Previous</a> <a href='dict字典(一).html'>Next</a> >> dict字典(一)</div>
         
     <!-- footer -->
       <div class="container">
