Day31(0215) progress update

--- a/config/content.htm
+++ b/config/content.htm
@@ -1063,6 +1063,17 @@ True
 False
 &gt;&gt;&gt; A != B
 True</pre>
-<p><strong> </strong></p>
+<h2><span>Day31(0215)</span></h2>
+<h3><span>dict字典(二)</span></h3>
+<p><strong>字典處理方法</strong></p>
+<p><strong>  </strong>  1.dict.get(key,default):傳回字典中鍵為key所對映的值，若該件不存在，則傳回選擇性參數default，若無<span>default參數，</span><span>則傳回None。</span></p>
+<p><strong> <span> </span></strong><span>  2.dict.pop(key,default):從字典中刪除鍵為key的鍵:值對並傳回所對映的值，若該件不存在，則傳回選擇性參數default，若無<span>default參數，會發生KeyError。</span></span></p>
+<p><span><strong>  </strong><span>  3.dict.popitem():從字典中隨機刪除一個鍵:值對並傳回該鍵:值對，<span>若要刪除的目標是空字典，會發生KeyError。</span></span></span></p>
+<p><span><span><strong>  </strong><span>  4.dict.keys():傳回字典所有的鍵。</span></span></span></p>
+<p><span><span><span><strong>  </strong><span>  5.dict.values():傳回字典所有的值。</span></span></span></span></p>
+<p><span><span><span><span><strong>  </strong><span>  6.dict.items():傳回字典所有的鍵:值對。</span></span></span></span></span></p>
+<p><span><span><span><span><span><strong>  </strong><span>  7.dict.copy():傳回字典的複本。</span></span></span></span></span></span></p>
+<p><span><span><span><span><span><span><strong>  </strong><span>  8.dict.clear():從字典中刪除所有鍵:值對。</span></span></span></span></span></span></span></p>
+<p><span><span><span><span><span><span><span><strong>  </strong><span>  9.dict.update(other):根據參數other所指定的字典更新目前的字典，將兩個字典合併，若有重複的鍵，將以參數other中的鍵:值對取代。</span></span></span></span></span></span></span></span></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
