--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1063,6 +1063,17 @@ True
 False
 &gt;&gt;&gt; A != B
 True</pre>
-<p><strong> </strong></p>
+<h2><span>Day31(0215)</span></h2>
+<h3><span>dict字典(二)</span></h3>
+<p><strong>字典處理方法</strong></p>
+<p><strong>  </strong>  1.dict.get(key,default):</p>
+<p><strong> <span> </span></strong><span>  2.dict.pop(key,default):</span></p>
+<p><span><strong>  </strong><span>  3.dict.popitem():</span></span></p>
+<p><span><span><strong>  </strong><span>  4.dict.keys():</span></span></span></p>
+<p><span><span><span><strong>  </strong><span>  5.dict.values():</span></span></span></span></p>
+<p><span><span><span><span><strong>  </strong><span>  6.dict.items():</span></span></span></span></span></p>
+<p><span><span><span><span><span><strong>  </strong><span>  7.dict.copy():</span></span></span></span></span></span></p>
+<p><span><span><span><span><span><span><strong>  </strong><span>  8.dict.clear():</span></span></span></span></span></span></span></p>
+<p><span><span><span><span><span><span><span><strong>  </strong><span>  9.dict.update():</span></span></span></span></span></span></span></span></p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
