Day33(0217) progress update

--- a/config/content.htm
+++ b/config/content.htm
@@ -1076,7 +1076,7 @@ True</pre>
 <p><span><span><span><span><span><span><strong>  </strong><span>  8.dict.clear():從字典中刪除所有鍵:值對。</span></span></span></span></span></span></span></p>
 <p><span><span><span><span><span><span><span><strong>  </strong><span>  9.dict.update(other):根據參數other所指定的字典更新目前的字典，將兩個字典合併，若有重複的鍵，將以參數other中的鍵:值對取代。</span></span></span></span></span></span></span></span></p>
 <h2><span>Day32(0216)</span></h2>
-<h3>turtle模組(繪圖)</h3>
+<h3>turtle模組繪圖(一)</h3>
 <p>匯入turtle模組，如下:</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">&gt;&gt;&gt;import turtle</pre>
 <p>輸入以下指令，會出現視窗如圖(一)，起始之中心點箭頭代表海龜，座標為(0,0)，方向向右。</p>
@@ -1114,5 +1114,33 @@ True</pre>
 <p>    11.<span>turtle.speed(x</span><span>):使用參數x設定箭頭的移動速度，範圍為1~10數字愈大，速度愈快，若未設定參數x則傳回目前箭頭的移動速度。</span></p>
 <p>    12.<span>turtle.dot(size,color</span><span>):根據參數size所指定的畫筆寬度及參數color所指定的顏色畫出原點。</span></p>
 <p>    13.<span>turtle.circle(rad,extent = None,steps = None</span><span>):根據參數畫圓，其中參數rad是圓的半徑；選擇性參數extent是角度，用來決定畫出圓的哪些部分，未指定則畫出全圓；選擇性參數steps是邊數，決定要在圓內畫出幾邊形，若未指定，則表示僅畫圓。</span></p>
+<h2><span>Day33(0217)</span></h2>
+<h3>turtle模組繪圖(二)</h3>
+<p><strong>控制畫筆、色彩與填滿色彩</strong></p>
+<p>主要為如何提起畫筆、放下畫筆、設定畫筆寬度、畫筆色彩、填充色彩和畫文字。</p>
+<p><strong>設定畫筆狀態</strong></p>
+<p>turtle模組提供了一些方法用來設定畫筆狀態，常用的如下:</p>
+<p>    1.turtle.pensize(width = None)、turtle.width(width = None):根據參數width設定畫筆寬度，若沒有指定參數width，則傳回目前畫筆的寬度。</p>
+<p>    2.<span>turtle.penup()、</span><span>turtle.up():提起畫筆，在移動箭頭時不畫線。</span></p>
+<p>    3.<span>turtle.pendown()、turtle.down():放下畫筆，接下來移動則會畫線。</span></p>
+<p>    4.<span>turtle.isdown():若畫筆是放下的，就傳回True、否則傳回False。</span></p>
+<p><strong>設定色彩</strong></p>
+<p><span>常用的畫筆色彩與填滿色彩設定如下:</span></p>
+<p>    1.<span>turtle.pencolor(r,g,b)、turtle.pencolor("ColorName"):根據參數設定畫筆色彩，若未設定則傳回目前畫筆的色彩，(r,g,b)中的三個字母分別代表(紅,綠,藍)。</span></p>
+<p>    2.turtle.fillcolor():根據參數填滿色彩，參數指定方式與<span>turtle.pencolor()相同。</span></p>
+<p>    3.<span>turtle.color():根據參數設定畫筆色彩與填滿色彩<span>，若未指定則傳回目前畫筆的色彩及填滿色彩。</span></span></p>
+<p></p>
+<p><strong>填滿色彩</strong></p>
+<p>turtle模組提供了一些方法用來填滿色彩，常用的如下:</p>
+<p>    1.turtle.filling():傳回填滿色彩狀態，True表示正在填滿色彩，False表示否。</p>
+<p>    2.turtle.begin_fill():在開始填滿色彩之前要呼叫此方法。</p>
+<p>    3.<span>turtle.end_fill():在結束填滿色彩之前要呼叫此方法。</span></p>
+<p><strong>畫文字</strong></p>
+<p>我們可以使用turtle模組提供的turtle.write()方法畫文字，其語法如下。</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">turtle.write(arg,move = False,align = "left",font = ("Arial",8,"normal"))</pre>
+<p>    1.arg:設定要畫的文字。</p>
+<p>    2.move:設定是否將箭頭移到文字的右下角，預設值為False，表示不移動箭頭。</p>
+<p>    3.align:設定對齊方式，有"left"、"center"或"right"，預設值為"left"</p>
+<p>    4.font:設定文字的字型、大小與樣式，預設值為("arial",8,"normal")</p>
 <h1>資料參考</h1>
 <p><a href="https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp">https://developer.mozilla.org/zh-TW/docs/Learn/Getting_started_with_the_web&amp;nbsp</a> </p>
